--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,15 @@
     Set the font size to 32px.
   */
 }
-
+.giraffe {
+  text-align: center;
+}
+.dino {
+  text-align: right;
+}
+.crocodile:hover {
+background-color: lightblue;
+}
 /*
   The giraffe is afraid of the crocodile and the dino.
    - center the giraffe in the park
